--- a/src/leden/bestuur.pug
+++ b/src/leden/bestuur.pug
@@ -1,12 +1,12 @@
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
-        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Mokveld.jpeg?as=avif&width=450')
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Peters.jpg?as=avif&width=450', alt='')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
+            h4.fw-bold.card-title.mb-3 Dhr. J.L. Peters
             ul.fs-5.list-group.list-unstyled
-                li Praeses, tevens Dux Luxuriae
-                li Lid sedert december 2022
-                li Favoriete wijn: Onbekend
+                li Praeses
+                li Lid sedert Maart 2024
+                li Favoriete wijn: Grasevina Kutjevo 2019
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
