--- a/src/leden/titeldragers.pug
+++ b/src/leden/titeldragers.pug
@@ -17,3 +17,13 @@
                 li Vice Ab-Actis
                 li Lid sedert oktober 2023
                 li Favoriete wijn: Derrière la Roche, Vieilles Vignes 2018
+
+.col-lg-4.col-sm-6.mb-5
+    .card.h-100.border-1.shadow-sm
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Mokveld.jpeg?as=avif&width=450')
+        .card-body.p-4
+            h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
+            ul.fs-5.list-group.list-unstyled
+                li Dux Luxuriae
+                li Lid sedert december 2022
+                li Favoriete wijn: Onbekend
