--- a/src/leden/titeldragers.pug
+++ b/src/leden/titeldragers.pug
@@ -2,7 +2,7 @@
     .card.h-100.border-1.shadow-sm
         img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Dijke.jpg?as=avif&height=228', alt='')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Dhr. van Dijke
+            h4.fw-bold.card-title.mb-3 Dhr. R. van Dijke
             ul.fs-5.list-group.list-unstyled
                 li Kelner
                 li Lid sedert april 2024
