--- a/src/leden/algemeen.pug
+++ b/src/leden/algemeen.pug
@@ -173,7 +173,7 @@
     .card.h-100.border-1.shadow-sm
         img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Ledeboer.png?as=avif&width=450', alt='')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Mgr. T.S. Ledeboer
+            h4.fw-bold.card-title.mb-3 Mgr. Th.S. Ledeboer
             ul.fs-5.list-group.list-unstyled
                 li Lid sedert april 2015
                 li Favoriete wijn: Inglenook Cabernet Sauvignon 1941
