feat: van dijke titels

--- a/src/leden/titeldragers.pug
+++ b/src/leden/titeldragers.pug
@@ -4,7 +4,7 @@
         .card-body.p-4
             h4.fw-bold.card-title.mb-3 Dhr. R. van Dijke
             ul.fs-5.list-group.list-unstyled
-                li Kelner
+                li Homines-Attributes, tevens Kelner, tevens Pedel
                 li Lid sedert april 2024
                 li Favoriete wijn: Schouwen-Druiveland Barrique+ 2021
 
