Wijntje van Henkemans toevoegen

--- a/src/leden/bestuur.pug
+++ b/src/leden/bestuur.pug
@@ -27,7 +27,7 @@
             ul.fs-5.list-group.list-unstyled
                 li Quaestor
                 li Lid sedert oktober 2023
-                li Favoriete wijn: onbekend
+                li Favoriete wijn: Sepp Moser Ried Breiter Rain Gruner Veltliner 2021
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
