fix: add spacing in footer year

--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -3,5 +3,5 @@ footer.py-4.mt-auto.red-bg
         .row.align-items-center.justify-content-between.flex-column.flex-sm-column
             .col-auto
                 h5.my-4.text-white
-                    | Copyright &copy; Dispuut I.V.V
+                    | Copyright &copy; Dispuut I.V.V&nbsp;
                     span#year
