--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -53,7 +53,7 @@ html(lang='en')
                             img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2017.jpeg?as=avif&width=620', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Meeles et al. AD 2017
-                            .fs-5.mb-4.fst-italic v.l.n.r: van Veenendaal, Keltjes, Beekveld, Meeles, Janssen, Schepens, Damhuis & van Horssen
+                            .fs-5.mb-4.fst-italic v.l.n.r: van Veenendaal, Keltjens, Beekveld, Meeles, Janssen, Schepens, Damhuis & van Horssen
                     .row.pb-5
                         .col-lg-6
                             img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2013.png?as=avif&width=620', alt='Statieportret')
