--- a/src/leden/bestuur.pug
+++ b/src/leden/bestuur.pug
@@ -25,7 +25,7 @@
         .card-body.p-4
             h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
             ul.fs-5.list-group.list-unstyled
-                li Quaestor
+                li Quaestor, tevens Vice Ab-Actis
                 li Lid sedert oktober 2023
                 li Favoriete wijn: Sepp Moser Ried Breiter Rain Gruner Veltliner 2021
 
