Favoriete wijn Van Wieringen

--- a/src/leden/actief.pug
+++ b/src/leden/actief.pug
@@ -24,4 +24,4 @@
             h4.fw-bold.card-title.mb-3 Dhr. S. van Wieringen
             ul.fs-5.list-group.list-unstyled
                 li Lid sedert april 2025
-                li Favoriete wijn: Onbekend
+                li Favoriete wijn: Egon Muller Scharzhofberger Riesling Trockenbeerenauslese
