--- a/src/leden/actief.pug
+++ b/src/leden/actief.pug
@@ -9,7 +9,7 @@
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
-        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Lakeman.jpeg?as=avif&width=450', alt='')
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Lakeman.jpg?as=avif&width=450', alt='')
         .card-body.p-4
             h4.fw-bold.card-title.mb-3 Dhr. L.J. Lakeman
             ul.fs-5.list-group.list-unstyled
