--- a/src/leden/bestuur.pug
+++ b/src/leden/bestuur.pug
@@ -12,7 +12,7 @@
     .card.h-100.border-1.shadow-sm
         img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Oosterholt.png?as=avif&width=450')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Dhr. S.A.J. Oosterholt
+            h4.fw-bold.card-title.mb-3 Mgr. S.A.J. Oosterholt
             ul.fs-5.list-group.list-unstyled
                 li Ab-Actis, tevens Typo3-fanaticus
                 li Lid sedert mei 2022
