--- a/src/leden/bestuur.pug
+++ b/src/leden/bestuur.pug
@@ -1,12 +1,12 @@
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
-        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Peters.jpg?as=avif&width=450', alt='')
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Henkemans.jpeg?as=avif&width=450', alt='')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Dhr. J.L. Peters
+            h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
             ul.fs-5.list-group.list-unstyled
-                li Praeses
-                li Lid sedert Maart 2024
-                li Favoriete wijn: Grasevina Kutjevo 2019
+                li Praeses,
+                li Lid sedert oktober 2023
+                li Favoriete wijn: Sepp Moser Ried Breiter Rain Gruner Veltliner 2021
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
@@ -21,13 +21,13 @@
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
-        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Henkemans.jpeg?as=avif&width=450', alt='')
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Peters.jpg?as=avif&width=450', alt='')
         .card-body.p-4
-            h4.fw-bold.card-title.mb-3 Dhr. B. Henkemans
+            h4.fw-bold.card-title.mb-3 Dhr. J.L. Peters
             ul.fs-5.list-group.list-unstyled
-                li Quaestor, tevens Vice Ab-Actis
-                li Lid sedert oktober 2023
-                li Favoriete wijn: Sepp Moser Ried Breiter Rain Gruner Veltliner 2021
+                li Quaestor
+                li Lid sedert Maart 2024
+                li Favoriete wijn: Grasevina Kutjevo 2019
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
