--- a/src/leden/titeldragers.pug
+++ b/src/leden/titeldragers.pug
@@ -10,6 +10,16 @@
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
+        img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Lakeman.jpg?as=avif&width=450', alt='')
+        .card-body.p-4
+            h4.fw-bold.card-title.mb-3 Dhr. L.J. Lakeman
+            ul.fs-5.list-group.list-unstyled
+                li Vice Ab-Actis
+                li Lid sedert juni 2025
+                li Favoriete wijn: Zoete witte wijn
+
+.col-lg-4.col-sm-6.mb-5
+    .card.h-100.border-1.shadow-sm
         img.card-img-top(loading='lazy', srcset!='./assets/img/Leden/Mokveld.jpeg?as=avif&width=450')
         .card-body.p-4
             h4.fw-bold.card-title.mb-3 Dhr. S.A. Mokveld
