--- a/src/leden/algemeen.pug
+++ b/src/leden/algemeen.pug
@@ -18,6 +18,7 @@
                 li Vinoloog
                 li Lid sedert november 2006
                 li Favoriete wijn: Domaine de Courcel Pommard Premier Cru Les Rugiens 2006
+                p.fst-italic.mt-3.text-center "Bezint eer ge begint!"
 
 .col-lg-4.col-sm-6.mb-5
     .card.h-100.border-1.shadow-sm
