feat: nieuwe statieportretten

--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -32,6 +32,18 @@ html(lang='en')
                 .container.px-4.mt-3
                     .row.pb-5
                         .col-lg-6
+                            img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2025-2.jpeg?as=avif&width=620', alt='Statieportret')
+                        .col-lg-6
+                            h3.fw-bold.mb-3 Praeses Henkemans et al. AD 2025
+                            .fs-5.mb-4.fst-italic v.l.n.r: Van Wieringen, Lakeman, Oosterholt, Verkade, Henkemans, Mokveld, Van Dijke, Peters & Koster.
+                    .row.pb-5
+                        .col-lg-6
+                            img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2025.jpeg?as=avif&width=620', alt='Statieportret')
+                        .col-lg-6
+                            h3.fw-bold.mb-3 Praeses Peters et al. AD 2025
+                            .fs-5.mb-4.fst-italic v.l.n.r: Van Dijke, Mokveld, Oosterholt, Verkade, Peters, Van Wieringen, Koster, Henkemans & Lakeman.
+                    .row.pb-5
+                        .col-lg-6
                             img.img-fluid.rounded(loading='lazy' width='620px', srcset!='./assets/img/statieportretten/Statieportret2024.jpeg?as=avif&width=620', alt='Statieportret')
                         .col-lg-6
                             h3.fw-bold.mb-3 Praeses Mokveld et al. AD 2024
