--- a/src/portretten.pug
+++ b/src/portretten.pug
@@ -25,7 +25,7 @@ html(lang='en')
             section#introduction
                 .container.px-4.mt-5
                     .row
-                        h1.fw-bold.mb-3 Statieportretten der Dispuut "In Vino Veritas"
+                        h1.fw-bold.mb-3 Statieportretten (sic) der Dispuut "In Vino Veritas"
                     .row
                         h3.mb-4.fst-italic Post multa saecula, pocula nulla!
 
